# filesearch_backend

./: .gitignore  pyproject.toml  pyproject.toml.bak  requirements.txt
app/: config.py  main.py
app/api/v1/: admin.py  file_preperation.py  file_search.py  router.py
app/schemas/: file_api.py
app/services/assistant/: agent.py  test.py  utils.py
app/services/assistant/agent_modules/GenerateAnswer/: agent.py
app/services/assistant/agent_modules/QueryAnalysis/: agent.py  utils.py
app/services/database/: dhi_db.py  vector_db.py
app/services/fileloader/: __init__.py  document_chunker.py  exceptions.py  loader.py  models.py  sharepoint_connector.py
app/services/fileloader/image_processor/: __init__.py  analyzer.py  base.py  enrichment.py
app/services/fileloader/image_processor/caption_backend/: __init__.py  base.py  bilp.py  blip.py  factory.py  florence.py  pali.py  smolvlm.py
app/services/fileloader/image_processor/classification_backend/: __init__.py  base.py  clip.py  deit.py  dino.py  factory.py  florence.py  vit.py
app/services/fileloader/image_processor/model_cache_manager/: __init__.py  cache_manager.py
app/services/fileloader/storage_connectors/: base.py  local.py  s3.py  sharepoint.py
app/services/mixins/: s3.py
app/services/model_manager/: __init__.py
app/services/sagemaker/: __init__.py  buildspec.yml
app/services/sagemaker/docker/: Dockerfile  Dockerfile_2  inference.py  inference_1.py  serve.py
app/services/summarygenerator/: summary_generator.py
app/services/topicgenerator/: __init__.py  base_topic_generator.py  bert_s3_loader.py  bert_topic_generator.py  topic_generator.py  topic_transformer.py
app/sockets/: user_requests.py
