[project]
name = "fileloader"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon Unterbusch",email = "simonunterbusch@unterbusch.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.11.11"
dependencies = [
    "docling (==2.24.0)",
    "llvmlite (>=0.44.0,<0.45.0)",
    "bertopic (>=0.16.4,<0.17.0)",
    "agent-toolbox @ git+https://github.com/Simon-U/agent-toolbox.git",
    "transformers (==4.42.0)",
    "sagemaker-inference (>=1.10.1,<2.0.0)",
    "msal (>=1.31.1,<2.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "sagemaker (>=2.240.0,<3.0.0)",
    "torchvision (==0.17.2)",
    "torch (==2.2.2)",
    "cryptography (<43)",
    "sentence-transformers (==3.4.1)",
    "einops (>=0.8.1,<0.9.0)",
    "timm (>=1.0.15,<2.0.0)",
    "setuptools (>=75.8.2,<76.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
